Fix: Reorder Icon Comp. settings and implement horizontal alignment

--- a/src/sass/ultimate-fields/components/icon-and-text.sass
+++ b/src/sass/ultimate-fields/components/icon-and-text.sass
@@ -1,45 +1,34 @@
 .icon-and-text
-	&>div:first-child
-		position: relative
-		a
-			position: absolute
-			top: 0
-			left: 0
-			right: 0
-			bottom: 0
-			margin: auto
-	&>div:last-child
-		width: 100%
-	.icon
+	.icon-wrapper
 		line-height: 0
-		&>span
+		span
 			display: inline-flex
+	.content-wrapper
+		width: 100%
 
 .icon-and-text.icon--top
-	&>div:first-child
+	display: flex
+	flex-direction: column
+	.icon-wrapper
 		padding-bottom: 10px
 
 .icon-and-text.icon--left
 	display: flex
-	&>div:first-child
+	.icon-wrapper
 		padding-right: 20px
 
 .icon-and-text.icon--right
 	display: flex
-	&>div:first-child
+	.icon-wrapper
 		padding-left: 20px
 		order: 2
-	&>div:last-child
+	.content-wrapper
 		order: 1
-		
-.icon-and-text.center-all
-	display: flex
-	justify-content: center
-	&>div:last-child
-		width: auto
 
+// horizontal alignment
+.icon-and-text[class*="-all"]
+	width: fit-content
+.icon-and-text.center-all
+	margin: auto
 .icon-and-text.right-all
-	display: flex
-	justify-content: flex-end
-	&>div:last-child
-		width: auto
+	margin-left: auto
